@@ -83,7 +83,7 @@ int	send_data_to_node(int nodeid, zbx_sock_t *sock, const char *data)
 {
 	int	res;
 
-	if (FAIL == (res = zbx_tcp_send_ext(sock, data, ZBX_TCP_NEW_PROTOCOL))) {
+	if (FAIL == (res = zbx_tcp_send(sock, data))) {
 		zabbix_log(LOG_LEVEL_ERR, "NODE %d: Error while sending data to Node [%d] error: %s",
 			CONFIG_NODEID,
 			nodeid,
@@ -101,7 +101,7 @@ int	recv_data_from_node(int nodeid, zbx_sock_t *sock, char **data)
 {
 	int	res;
 
-	if (FAIL == (res = zbx_tcp_recv_ext(sock, data, 0))) {
+	if (FAIL == (res = zbx_tcp_recv(sock, data))) {
 		zabbix_log(LOG_LEVEL_ERR, "NODE %d: Error while receiving answer from Node [%d] error: %s",
 			CONFIG_NODEID,
 			nodeid,
